--- a/app/src/main/res/layout/activity_main_area.xml
+++ b/app/src/main/res/layout/activity_main_area.xml
@@ -23,7 +23,7 @@
         android:text="@string/button_add" />
 
     <ListView
-        android:id="@android:id/list"
+        android:id="@+id/listView1"
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/button1"
