--- a/app/src/main/res/layout/activity_main_area.xml
+++ b/app/src/main/res/layout/activity_main_area.xml
@@ -7,12 +7,9 @@
 
     <fragment
         android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp" />
+        android:name="com.google.android.gms.maps.MapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"/>
 
     <Button
         android:id="@+id/button1"
