--- a/app/src/main/res/layout/activity_main_area.xml
+++ b/app/src/main/res/layout/activity_main_area.xml
@@ -1,52 +1,57 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainAreaActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainAreaActivity"
+    android:background="#ff199cff">
 
     <fragment
         android:id="@+id/map"
         class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="100dp"/>
+        android:layout_height="0dp"
+        android:layout_weight="30"
+        android:layout_marginTop="10dp"/>
 
-    <Button
-        android:id="@+id/button_new_area"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/map"
-        android:text="@string/button_add" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="70"
+        android:layout_below="@+id/map">
 
-    <ListView
-        android:id="@+id/listView1"
-        android:layout_width="fill_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/button_new_area"
-        android:layout_marginTop="10dp" />
+        <ListView
+            android:id="@+id/listView1"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:background="#fffbfdff" />
 
-    <com.software.shell.fab.ActionButton
-        android:id="@+id/action_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="@dimen/fab_margin"
-        android:layout_marginBottom="@dimen/fab_margin"
-        fab:type="DEFAULT"
-        fab:button_color="@color/fab_material_lime_500"
-        fab:button_colorPressed="@color/fab_material_lime_900"
-        fab:image="@drawable/fab_plus_icon"
-        fab:image_size="24dp"
-        fab:shadow_color="#757575"
-        fab:shadow_radius="1.0dp"
-        fab:shadow_xOffset="0.5dp"
-        fab:shadow_yOffset="1.0dp"
-        fab:stroke_color="@color/fab_material_blue_grey_500"
-        fab:stroke_width="1.0dp"
-        fab:show_animation="@anim/fab_roll_from_down"
-        fab:hide_animation="@anim/fab_roll_to_down"
-        />
-</RelativeLayout>
+        <com.software.shell.fab.ActionButton
+            android:id="@+id/action_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="@dimen/fab_margin"
+            android:layout_marginBottom="@dimen/fab_margin"
+            fab:type="DEFAULT"
+            fab:button_color="@color/fab_material_lime_500"
+            fab:button_colorPressed="@color/fab_material_lime_900"
+            fab:image="@drawable/fab_plus_icon"
+            fab:image_size="24dp"
+            fab:shadow_color="#757575"
+            fab:shadow_radius="1.0dp"
+            fab:shadow_xOffset="0.5dp"
+            fab:shadow_yOffset="1.0dp"
+            fab:stroke_color="@color/fab_material_blue_grey_500"
+            fab:stroke_width="1.0dp"
+            fab:show_animation="@anim/fab_roll_from_down"
+            fab:hide_animation="@anim/fab_roll_to_down"
+            />
+    </RelativeLayout>
+</LinearLayout >
