--- a/app/src/main/res/layout/activity_main_area.xml
+++ b/app/src/main/res/layout/activity_main_area.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainAreaActivity"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".MainAreaActivity"
     android:background="#ff199cff">
 
     <fragment
@@ -16,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="30"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="0dp"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
